--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "rapid2fa",
-  "version": "2.0.0",
+  "version": "1.0.4",
   "description": "This Node library enables you to communicate with Rapid2FA API.",
   "main": "index.js",
+  "readmeFilename ": "README.md",
     "dependencies": {
     "needle": "^1.4.0"
   },
